--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -45,7 +45,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>거기 <em>누가좀해줘</em></h2></a>
+          <a class="navbar-brand" href="/"><h2>거기 <em>누가좀해줘</em></h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -92,8 +92,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     </div>
     <!-- Banner Ends Here -->
 
-<a id="notice"/>
-    <div class="latest-products">
+    <div id="notice" class="latest-products">
       <div class="container">
         <div class="col-md-12">
           <div class="section-heading">
@@ -104,7 +103,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon">
-                <a href="#"><i class="fas fa-exclamation"></i></a>
+                <a href="/board"><i class="fas fa-exclamation"></i></a>
               </div>
               <div class="down-content">
                 <h4>NOTICE</h4>
