Admin 세션생//웹프과제제출본

--- a/app/src/views/admin/index.ejs
+++ b/app/src/views/admin/index.ejs
@@ -130,113 +130,6 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
             </div>
           </div>
-
-
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2 id="list">무엇을 도와드릴까요?</h2>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_01.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>편의점 심부름</h4></a>
-                <p>고객님 주변에 있는 편의점에서 원하시는 물건을 구매해드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_02.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>음식 배달</h4></a>
-                <p>고객님이 원하는 음식점의 배달되지 않는 음식도 빠르게 배달해 드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_03.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>음식 배달</h4></a>
-                <p>고객님이 원하는 음식점의 배달되지 않는 음식도 빠르게 배달해 드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_04.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>서류/물건 배달</h4></a>
-                <p>서류를 급하게 전달해야 하나요? 헬퍼가 도와드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_05.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>이사하기</h4></a>
-                <p>전문 이사센터 및 헬퍼가 고객님의 이사를 안전하고 신속하게 도와드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_06.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>화물 부치기/찾아오기</h4></a>
-                <p>바쁘시거나 무거운 화물을 옮기셔야 하나요? 헬퍼가 빠르게 도와드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_07.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>집 청소</h4></a>
-                <p>아프셔서 청소가 어려우신가요? 헬퍼가 구석구석 청소해드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_08.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>못질</h4></a>
-                <p>벽에 못질하기 힘드신가요? 헬퍼가 신속하게 도와드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_09.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>가구/물건 옮기기</h4></a>
-                <p>언제든지 든든한 헬퍼들이 무거운 물건들을 옮겨 드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_10.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>가구/물건 조립</h4></a>
-                <p>조립하기 어려우신가요? 손재주가 뛰어난 헬퍼가 도와드립니다.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="product-item">
-              <a href="#"><img src="assets/images/service_11.jpg" alt=""></a>
-              <div class="down-content">
-                <a href="#"><h4>하객 대행</h4></a>
-                <p>헬퍼들이 하객을 대행하여 고객님의 기쁜날을 함께 기뻐해 드립니다.</p>
-              </div>
-            </div>
-          </div>
-
         </div>
       </div>
     </div>
@@ -247,27 +140,44 @@ https://templatemo.com/tm-546-sixteen-clothing
     <div class="row">
       <div class="col-md-4">
         <div class="service-item">
+          <div class="icon">
+            <i class="fas fa-pen"></i>
+          </div>
+          <div class="down-content">
+            <h4>Edit Notices</h4>
+            <p>공지사항 편집</p>
+            <a href="/admin/list/1" class="filled-button">편집</a>
+          </div>
         </div>
-      </div>
+        </div>
       <div class="col-md-4">
         <div class="service-item">
           <div class="icon">
             <i class="fas fa-pen"></i>
           </div>
           <div class="down-content">
-            <h4>Apply for Helper</h4>
-            <p>원하는 시간에 원하는 업무를 하실 수 있습니다.</p>
-            <a href="#" class="filled-button">지원하기</a>
+            <h4>Answer to Question</h4>
+            <p>질의응답</p>
+            <a href="#" class="filled-button">답변</a>
           </div>
         </div>
         </div>
+        <div class="col-md-4">
+          <div class="service-item">
+            <div class="icon">
+              <i class="fas fa-pen"></i>
+            </div>
+            <div class="down-content">
+              <h4>Manage Helpers</h4>
+              <p>헬퍼 지원&관리</p>
+              <a href="#" class="filled-button">관리</a>
+            </div>
+          </div>
+          </div>
     </div>
   </div>
 </div>
-
-
-
-
+    
 
 
     <footer>
