--- a/app/src/views/home/index.ejs
+++ b/app/src/views/home/index.ejs
@@ -113,7 +113,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon">
-                <a href="#"><i class="fas fa-headset"></i></a>
+                <a href="/qna"><i class="fas fa-headset"></i></a>
               </div>
               <div class="down-content">
                 <h4>Q&A</h4>
@@ -123,7 +123,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon">
-                <a href="#"><i class="fas fa-question"></i></a>
+                <a href="/fq"><i class="fas fa-question"></i></a>
               </div>
               <div class="down-content">
                 <h4>FAQ</h4>
