--- a/app/src/views/fq/faq.ejs
+++ b/app/src/views/fq/faq.ejs
@@ -57,7 +57,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a class="nav-link" href="#notice">고객센터</a>
             </li>
               <li class="nav-item">
-                <a class="nav-link" href="#list">무엇을 도와드릴까요?</a>
+                <a class="nav-link" href="/#list">무엇을 도와드릴까요?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/login">로그인/회원가입</a>
@@ -116,7 +116,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon2">
-                <a href="#"><i class="fas fa-headset"></i></a>
+                <a href="/qna"><i class="fas fa-headset"></i></a>
               </div>
               <div class="down-content">
                 <h4>Q&A</h4>
@@ -126,7 +126,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon1">
-                <a href="/fq"><i class="fas fa-question"></i></a>
+                <a href="#notice"><i class="fas fa-question"></i></a>
               </div>
               <div class="down-content">
                 <h4>FAQ</h4>
@@ -146,14 +146,34 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
                 <br>
                 <div id="boxholder_2" class="box cpbox text">
-                    <h2>Why am I asking such a strange question?&nbsp;<i class="fas fa-sm fa-chevron-down"></i></h2>
+                    <h2>'거기 누가좀해줘'는 어떤 서비스인가요?&nbsp;<i class="fas fa-sm fa-chevron-down"></i></h2>
                     <div class="box_content">
-                        <p>Felis ultrices ac erat duis diam vestibulum scelerisque nisi condimentum praesent mus torquent
-                            suspendisse ullamcorper mi nam diam consectetur mi fusce adipiscing ad platea.Faucibus natoque
-                            quisque facilisi justo vestibulum dolor ullamcorper hac parturient risus nunc eu ad taciti phasellus
-                            a vestibulum malesuada at et parturient.A duis aliquet conubia vitae semper ut scelerisque a semper
-                            adipiscing vestibulum id nullam condimentum suspendisse phasellus vestibulum proin vivamus
-                            scelerisque.Augue est.</p>
+                        <p>'거기 누가좀해줘'는 누구든지 참여할 수 있는
+
+                          위치기반 모바일용역중개플랫폼입니다.
+                          
+                          
+                          집에 청소하기가 힘드시나요?
+                          
+                          빨래가 하기 싫어요?
+                          
+                          누군가가 뭐 좀 사다 줬으면 하나요?
+                          
+                          
+                          이처럼 귀찮은 일, 여러운 일들이 있을 때,
+                          
+                          '거기 누가좀해줘' 에 요청을 하시면
+                          
+                          '거기 누가좀해줘' 의 헬퍼가 그 일들을 대신해 드립니다.
+                          
+                          
+                          '거기 누가좀해줘' 는 언제 어디서든지 사용하실 수 있으며,
+                          
+                          헬퍼들에 선택에 의해,
+                          
+                          24시간 운영되는 서비스입니다.
+                          
+                          많은 이용 부탁드립니다.</p>
                     </div>
                     <div class="clear">
                         <!--space-->
@@ -161,14 +181,17 @@ https://templatemo.com/tm-546-sixteen-clothing
                 </div>
         
                 <div id="boxholder_2" class="box cpbox text">
-                    <h2>Why am I asking such a strange question?&nbsp;<i class="fas fa-sm fa-chevron-down"></i></h2>
+                    <h2>"헬퍼"란 무엇인가요?&nbsp;<i class="fas fa-sm fa-chevron-down"></i></h2>
                     <div class="box_content">
-                        <p>Felis ultrices ac erat duis diam vestibulum scelerisque nisi condimentum praesent mus torquent
-                            suspendisse ullamcorper mi nam diam consectetur mi fusce adipiscing ad platea.Faucibus natoque
-                            quisque facilisi justo vestibulum dolor ullamcorper hac parturient risus nunc eu ad taciti phasellus
-                            a vestibulum malesuada at et parturient.A duis aliquet conubia vitae semper ut scelerisque a semper
-                            adipiscing vestibulum id nullam condimentum suspendisse phasellus vestibulum proin vivamus
-                            scelerisque.Augue est.</p>
+                        <p>"헬퍼"는 고객들이 등록한 업무를 수행하는 사람을 의미합니다.
+
+                          헬퍼는 누구든지 지원할 수 있으며, '거기 누가좀해줘' 고객센터에서 간단한 인증을 거친 후 고객들의 심부름 또는 요청업무에 대한 알림을 받을 수 있습니다.
+                          
+                          자기 동네 주변의 간단한 심부름, 자기가 잘하는 업무들을 설정해 두시면, 해당 업무만의 요청을 받을 수 있으며, 업무를 수행한 대가로 수익을 창출할 수 있습니다. 
+                          
+                           
+                          
+                          '거기 누가좀해줘' 헬퍼로 지원하시고 남는 시간을 이용해 수익을 창출하세요.</p>
                     </div>
                     <div class="clear">
                         <!--space-->
