--- a/app/src/views/fq/qna.ejs
+++ b/app/src/views/fq/qna.ejs
@@ -56,7 +56,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <a class="nav-link" href="#notice">고객센터</a>
             </li>
               <li class="nav-item">
-                <a class="nav-link" href="#list">무엇을 도와드릴까요?</a>
+                <a class="nav-link" href="/#list">무엇을 도와드릴까요?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/login">로그인/회원가입</a>
@@ -105,7 +105,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon2">
-                <a href="#notice"><i class="fas fa-exclamation"></i></a>
+                <a href="/board"><i class="fas fa-exclamation"></i></a>
               </div>
               <div class="down-content">
                 <h4>NOTICE</h4>
@@ -115,7 +115,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon1">
-                <a href="#"><i class="fas fa-headset"></i></a>
+                <a href="#notice"><i class="fas fa-headset"></i></a>
               </div>
               <div class="down-content">
                 <h4>Q&A</h4>
@@ -125,7 +125,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-4">
             <div class="notice">
               <div class="icon2">
-                <a href="#"><i class="fas fa-question"></i></a>
+                <a href="/fq"><i class="fas fa-question"></i></a>
               </div>
               <div class="down-content">
                 <h4>FAQ</h4>
